[gd_scene load_steps=10 format=3 uid="uid://dyc004700s8q8"]

[ext_resource type="Script" path="res://Other/Shop.gd" id="1_1n8xo"]
[ext_resource type="Texture2D" uid="uid://0iowd01sqvhc" path="res://ExternalAssets/Sunny-land-files/Graphical Assets/environment/Props/straw-house.png" id="1_jsy54"]
[ext_resource type="Resource" uid="uid://bh2lefpoeh28c" path="res://Other/HeartShopItem.tres" id="2_o3t8b"]
[ext_resource type="Resource" uid="uid://cspfs8prn264q" path="res://Global/GameState.tres" id="3_0rgk6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8wjd"]
size = Vector2(70, 52.5)

[sub_resource type="Animation" id="Animation_begyn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_nfv4h"]
resource_name = "TransIn"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -1000), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4vnxd"]
resource_name = "TransOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rte1v"]
_data = {
"RESET": SubResource("Animation_begyn"),
"TransIn": SubResource("Animation_nfv4h"),
"TransOut": SubResource("Animation_4vnxd")
}

[node name="Shop" type="Node2D"]
process_mode = 3
script = ExtResource("1_1n8xo")
item_set = Array[Resource("res://Other/ShopItem.gd")]([ExtResource("2_o3t8b")])
game_state = ExtResource("3_0rgk6")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_jsy54")

[node name="PromptTip" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -72.0
offset_top = -57.0
offset_right = -32.0
offset_bottom = -17.0
color = Color(0.913725, 0.670588, 0.0941176, 1)

[node name="Label" type="Label" parent="PromptTip"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "E"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-17, 21)
shape = SubResource("RectangleShape2D_u8wjd")

[node name="ShopMenu" type="CanvasLayer" parent="."]

[node name="Anim" type="AnimationPlayer" parent="ShopMenu"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_rte1v")
}

[node name="ShopControl" type="PanelContainer" parent="ShopMenu"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -544.0
offset_top = -320.0
offset_right = 544.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ShopMenu/ShopControl"]
layout_mode = 2

[node name="HeaderMargin" type="MarginContainer" parent="ShopMenu/ShopControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HeaderContainer" type="HBoxContainer" parent="ShopMenu/ShopControl/VBoxContainer/HeaderMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/HeaderMargin/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemName" type="Label" parent="ShopMenu/ShopControl/VBoxContainer/HeaderMargin/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 11.0
theme_override_font_sizes/font_size = 40
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="ShopMenu/ShopControl/VBoxContainer/HeaderMargin/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "X"

[node name="CenterMargin" type="MarginContainer" parent="ShopMenu/ShopControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="CenterContainer" type="HBoxContainer" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin"]
layout_mode = 2
size_flags_vertical = 3

[node name="Spacer3" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviousButton" type="Button" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme_override_font_sizes/font_size = 28
disabled = true
text = "<"

[node name="Spacer5" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Texture" type="TextureRect" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
expand_mode = 1

[node name="Spacer4" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
focus_mode = 0
theme_override_font_sizes/font_size = 28
disabled = true
text = ">"

[node name="Spacer6" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/CenterMargin/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescriptionMargin" type="MarginContainer" parent="ShopMenu/ShopControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ItemDescription" type="Label" parent="ShopMenu/ShopControl/VBoxContainer/DescriptionMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 15
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus purus eleifend dui tincidunt condimentum. Nulla nibh nibh, varius a odio et, scelerisque interdum ex. Quisque molestie augue vitae ultrices rhoncus. Nulla sed augue eros. Nulla pellentesque, nisl ac placerat sagittis, nisl ex euismod libero, aliquam facilisis ante ipsum eu arcu. Phasellus lacus mi, accumsan id arcu vel, elementum lacinia dui. Nulla vel urna quis tortor ornare imperdiet.  "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="BuyMargin" type="MarginContainer" parent="ShopMenu/ShopControl/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="BuyButtonContainer" type="HBoxContainer" parent="ShopMenu/ShopControl/VBoxContainer/BuyMargin"]
layout_mode = 2

[node name="Spacer" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/BuyMargin/BuyButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BuyButton" type="Button" parent="ShopMenu/ShopControl/VBoxContainer/BuyMargin/BuyButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
theme_override_font_sizes/font_size = 30
text = "Buy: ?"

[node name="Spacer2" type="Control" parent="ShopMenu/ShopControl/VBoxContainer/BuyMargin/BuyButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="ShopMenu/ShopControl/VBoxContainer/HeaderMargin/HeaderContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="ShopMenu/ShopControl/VBoxContainer/BuyMargin/BuyButtonContainer/BuyButton" to="." method="_on_buy_button_pressed"]
